--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.83.3",
+    "@react-three/fiber": "^8.14.1",
     "ahooks": "^3.7.8",
     "axios": "^1.5.0",
     "husky": "^8.0.3",
@@ -21,6 +23,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-three-fiber": "^6.0.13",
+    "three": "^0.156.1",
     "unplugin-auto-import": "^0.16.6"
   },
   "devDependencies": {
