--- a/package.json
+++ b/package.json
@@ -12,18 +12,25 @@
   "dependencies": {
     "@react-three/drei": "^9.83.3",
     "@react-three/fiber": "^8.14.1",
+    "@types/lodash": "^4.14.198",
     "ahooks": "^3.7.8",
+    "antd": "^5.9.0",
     "axios": "^1.5.0",
+    "codemirror": "^6.0.1",
+    "commitizen": "^4.3.0",
     "husky": "^8.0.3",
     "i18n": "^0.15.1",
     "less": "^4.2.0",
     "lodash": "^4.17.21",
     "mobx": "^6.10.2",
+    "mobx-react": "^9.0.1",
     "mobx-react-lite": "^4.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
     "react-three-fiber": "^6.0.13",
     "three": "^0.156.1",
+    "turf": "^3.0.14",
     "unplugin-auto-import": "^0.16.6"
   },
   "devDependencies": {
@@ -32,7 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
+    "eslint": "^8.49.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "typescript": "^5.0.2",
