--- a/package.json
+++ b/package.json
@@ -4,12 +4,31 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "set NODE_ENV=development && vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install",
+    "commit": "npx lint-staged && cz",
+    "lint": "eslint --fix src/**/*.tsx"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{html,less}": [
+      "prettier --write"
+    ],
+    "package.json": [
+      "prettier --write"
+    ],
+    "*.md": [
+      "prettier --write"
+    ]
   },
   "dependencies": {
+    "@commitlint/cli": "^17.7.1",
+    "@commitlint/config-conventional": "^17.7.0",
     "@react-three/drei": "^9.83.3",
     "@react-three/fiber": "^8.14.1",
     "@types/lodash": "^4.14.198",
@@ -21,6 +40,7 @@
     "husky": "^8.0.3",
     "i18n": "^0.15.1",
     "less": "^4.2.0",
+    "lint-staged": "^14.0.1",
     "lodash": "^4.17.21",
     "mobx": "^6.10.2",
     "mobx-react": "^9.0.1",
@@ -31,7 +51,8 @@
     "react-three-fiber": "^6.0.13",
     "three": "^0.156.1",
     "turf": "^3.0.14",
-    "unplugin-auto-import": "^0.16.6"
+    "unplugin-auto-import": "^0.16.6",
+    "cz-conventional-changelog": "^3.3.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -39,10 +60,18 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^3.0.3",
+    "prettier-eslint-cli": "^7.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "vite": "^4.4.5",
+    "autoprefixer": "^10.4.13"
   }
 }
