--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "r3f-demo",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "dev": "set NODE_ENV=development && vite",
     "build": "tsc && vite build",
@@ -12,7 +12,7 @@
     "lint": "eslint --fix src/**/*.tsx"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
+    "/src/*.{js,jsx,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ],
