--- a/package.json
+++ b/package.json
@@ -33,10 +33,11 @@
     "@react-three/fiber": "^8.14.1",
     "@types/lodash": "^4.14.198",
     "ahooks": "^3.7.8",
-    "antd": "^5.9.0",
+    "antd": "^5.9.1",
     "axios": "^1.5.0",
     "codemirror": "^6.0.1",
     "commitizen": "^4.3.0",
+    "cz-conventional-changelog": "^3.3.0",
     "husky": "^8.0.3",
     "i18n": "^0.15.1",
     "less": "^4.2.0",
@@ -51,8 +52,7 @@
     "react-three-fiber": "^6.0.13",
     "three": "^0.156.1",
     "turf": "^3.0.14",
-    "unplugin-auto-import": "^0.16.6",
-    "cz-conventional-changelog": "^3.3.0"
+    "unplugin-auto-import": "^0.16.6"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
@@ -60,18 +60,18 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "autoprefixer": "^10.4.13",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.49.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-react": "^7.32.2",
     "prettier": "^3.0.3",
     "prettier-eslint-cli": "^7.1.0",
     "typescript": "^5.0.2",
-    "vite": "^4.4.5",
-    "autoprefixer": "^10.4.13"
+    "vite": "^4.4.5"
   }
 }
