--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": ["src/*"],
+      "@core/*": ["src/core/*"]
+    }
   },
-  "include": ["src"],
+  "include": ["src", "configs/autoImport/auto-imports.d.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
